--- a/src/App.scss
+++ b/src/App.scss
@@ -3,3 +3,11 @@
 	height: 100vh;
 
 }
+.ready {
+	width: 100vw;
+	height: 100vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-size: xx-large;
+}
